Allow custom settings on interfaces
This commit enables the user to configure custom settings for
specific interfaces by setting something like this:

    other_interfaces:
      leaf-DC1-01:
        swp11:
          - link-duplex half
          - link-speed  100

in `network-orchestrator/group_vars/all.yml`.

--- a/network-orchestrator/group_vars/example.all.yml
+++ b/network-orchestrator/group_vars/example.all.yml
@@ -18,3 +18,14 @@ ntpservers:
 
 ntp_listen_interface: "eth0"
 default_timezone: "Europe/Zurich"
+
+# Non-standard or custom interface settings #
+#############################################
+# The configuration below is only applied   #
+# to interfaces that are of type "Other"    #
+#############################################
+other_interfaces:
+  leaf-DC1-01:
+    swp11:
+      - link-duplex half
+      - link-speed  100
