--- a/network-orchestrator/roles/cumulus/tasks/main.yml
+++ b/network-orchestrator/roles/cumulus/tasks/main.yml
@@ -1,9 +1,15 @@
-- import_tasks: roles/cumulus/tasks/interfaces.yml
-- import_tasks: roles/cumulus/tasks/frr.yml
-- import_tasks: roles/cumulus/tasks/dhcp.yml
-- import_tasks: roles/cumulus/tasks/hosts.yml
 - import_tasks: roles/cumulus/tasks/misc.yml
+  tags: misc
+- import_tasks: roles/cumulus/tasks/interfaces.yml
+  tags: interfaces
+- import_tasks: roles/cumulus/tasks/frr.yml
+  tags: frr
+- import_tasks: roles/cumulus/tasks/dhcp.yml
+  tags: dhcp
+- import_tasks: roles/cumulus/tasks/hosts.yml
+  tags: hosts
 - import_tasks: roles/cumulus/tasks/packages.yml
+  when: install_packages
   tags: packages
 - import_tasks: roles/cumulus/tasks/etckeeper.yml
   when: install_etckeeper
